infrastructure/k8s/kandula/kandula-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kandula-deployment
  namespace: kandula
  labels:
    app: kandula-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kandula-app
  template:
    metadata:
      labels:
        service: kandula-svc
        app: kandula-app
    spec:
      serviceAccountName: opsschool-sa
      containers:
      - name: kandula
        image: lirondadon/kandula:2.0.0
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        - containerPort: 5001
          name: metrics
          protocol: TCP
        volumeMounts:
        - name: config-vol
          mountPath: /app/kandula/config
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 180
          periodSeconds: 15
          timeoutSeconds: 10
          failureThreshold: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 60
          periodSeconds: 15
          timeoutSeconds: 10
          failureThreshold: 5
      volumes:
      - name: config-vol
        configMap:
          name: kandula-config
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: zone
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: kandula-app
      - maxSkew: 1
        topologyKey: node
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: kandula-app


---
apiVersion: v1
kind: Service
metadata:
  name: kandula-svc
  namespace: kandula
  labels:
     operated-prometheus: "true"
  annotations:
    prometheus.io/scrape: "true"
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
  - name: metrics
    port: 5001
    targetPort: 5001
    protocol: TCP
  selector:
    app: kandula-app
