infrastructure/k8s/kandula/kandula-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kandula-ingress
  namespace: kandula
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/default-backend: kandula-svc
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - kandula.lirondadon.link
      secretName: echo-tls
  rules:
  - host: kandula.lirondadon.link
    http:
      paths:
      - backend:
          service:
            name: kandula-svc
            port:
              number: 80
        path: /
        pathType: Prefix
